kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-cro
spec:
  revisionHistoryLimit: 0
  replicas: 2
  selector:
    matchLabels:
      app: hello-cro
  template:
    metadata:
      labels:
        app: hello-cro
    spec:
      containers:
        - name: main
          image: ttl.sh/hello-cro
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 10m
              memory: 10Mi
            limits:
              memory: 20Mi
              cpu: 20m
