kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-cro
spec:
  selector:
    app: hello-cro
  ports:
    - port: 80
